# athena

./: .gitignore  LICENSE  README.md  pyproject.toml
assets/backgrounds/: README.md
assets/images/: README.md
athena_bot/: __init__.py  client.py  download.py  overwatch.py  utils.py
tests/: test_athena_bot.py  test_overwatch.py
